projects/card-benefits/cloudformation/PlatformInstance.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "MWD - Millennium Platform Instance - Shared resources between different applications within a contained environment",

  "Parameters": {
    "vpc": {
      "Type": "AWS::EC2::VPC::Id",
      "Description": "VPC to create resources under"
    },
    "accountStackName": {
      "Type": "String",
      "Description": "parent stack name"
    },
    "platformStackName": {
      "Type": "String",
      "Description": "parent stack name"
    },
    "envType": {
      "Type": "String",
      "Description": "designated environment type",
      "Default": "dev",
      "AllowedValues": ["dev", "stage", "prod"]
    },
    "instance": {
      "Type": "String",
      "Description": "unique short name for this Platform Instance, e.g. sit, dit",
      "MinLength": 3,
      "MaxLength": 10,
      "AllowedPattern": "^[a-z][a-z0-9\\-]*$",
      "ConstraintDescription": "Must start with a letter, only contain lower-case letters, '-', and/or numbers"
    },
    "privateSubnets": {
      "Type": "List<AWS::EC2::Subnet::Id>",
      "Description": "Private Subnets"
    },
    "publicSubnets": {
      "Type": "List<AWS::EC2::Subnet::Id>",
      "Description": "Public subnets"
    },
    "deploymentId": {
      "Type": "String",
      "Description": "The unique ID for the deployment"
    }
  },

  "Conditions": {
    "isDevEnv": {"Fn::Equals": [{"Ref": "envType"}, "dev"]},
    "isNotDevEnv": {"Fn::Not": [{"Fn::Equals": [{"Ref": "envType"}, "dev"]}]},
    "isStageEnv": {"Fn::Equals": [{"Ref": "envType"}, "stage"]},
    "isProdEnv": {"Fn::Equals": [{"Ref": "envType"}, "prod"]},
    "isNotProdEnv": {"Fn::Not": [{"Fn::Equals": [{"Ref": "envType"}, "prod"]}]}
  },

  "Resources": {
    "HostedZoneExternal": {
      "Type": "AWS::Route53::HostedZone",
      "Description": "DNS HostedZone for externally/publicly accessible resources/applications",
      "Properties": {
        "HostedZoneConfig": {
          "Comment": {"Fn::Sub": ["Public DNS for the ${instance} instance of the ${platform} platform",
            {"platform": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-platform"}}}]}
        },
        "Name": {"Fn::Sub": ["${instance}.${domain}.",
          {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneExternal-Domain"}}}]}
      }
    },
    "RecordSetNSExternal": {
      "Type": "AWS::Route53::RecordSet",
      "Description": "NS Record for delegating DNS records to environment DNS",
      "Properties": {
        "Type": "NS",
        "HostedZoneId": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneExternal-Id"}},
        "ResourceRecords": {"Fn::GetAtt": ["HostedZoneExternal", "NameServers"]},
        "Comment": {"Fn::Sub": "Delegated DNS ALB for ${instance} environment"},
        "TTL": "300",
        "Name": {"Fn::Sub": ["${instance}.${domain}",
          {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneExternal-Domain"}}}]}
      },
      "DependsOn": ["HostedZoneExternal"]
    },

    "HttpsCertExternal": {
      "Type": "AWS::CertificateManager::Certificate",
      "Description": "TLS Cert for https communication to the ALBs",
      "Properties": {
        "DomainName": {"Fn::Sub": ["${instance}.${domain}",
          {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneExternal-Domain"}}}]},
        "SubjectAlternativeNames": [
          {"Fn::Sub": ["*.${instance}.${domain}",
            {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneExternal-Domain"}}}]}
        ],
        "DomainValidationOptions": [{
          "ValidationDomain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HttpsCert-ValidationDomain"}},
          "DomainName": {"Fn::Sub": ["*.${instance}.${domain}",
            {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneExternal-Domain"}}}]}
        }],
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Sub": ["${platform} - ${instance} - Public Https Cert",
            {"platform": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-platform"}}}]}}
        ]
      },
      "DependsOn": ["HostedZoneExternal"]
    },
    "HttpsCertInternal": {
      "Type": "AWS::CertificateManager::Certificate",
      "Description": "HttpsCert for encrypted communication to the internal Applications/Resources",
      "Properties": {
        "DomainName": {"Fn::Sub": ["${instance}.${domain}",
          {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneInternal-Domain"}}}]},
        "SubjectAlternativeNames": [
          {"Fn::Sub": ["*.${instance}.${domain}",
            {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneInternal-Domain"}}}]}
        ],
        "DomainValidationOptions": [{
          "ValidationDomain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HttpsCert-ValidationDomain"}},
          "DomainName": {"Fn::Sub": ["*.${instance}.${domain}",
            {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneInternal-Domain"}}}]}
        }],
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Sub": ["${platform} - ${instance} - Private Https Cert",
            {"platform": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-platform"}}}]}}
        ]
      }
    },

    "SecGrpPublicAlb": {
      "Type": "AWS::EC2::SecurityGroup",
      "Description": "Allow Traffic to External/Public facing Application Load Balancers",
      "Properties": {
        "VpcId": {"Ref": "vpc"},
        "GroupDescription": "Access to public facing Application Load Balancers",
        "GroupName": {"Fn::Sub": ["${prefix}-${instance}-alb-sg",
          {"prefix": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-resource-prefix"}}}]},
        "SecurityGroupIngress": [
          {"Fn::If": ["isDevEnv",    {"IpProtocol": "tcp", "FromPort": 443, "ToPort": 443, "CidrIp": "208.64.192.0/22", "Description": "All Encrypted (HTTPS) Public Traffic from WEX VPN"},                {"Ref": "AWS::NoValue"}]},
          {"Fn::If": ["isDevEnv",    {"IpProtocol": "tcp", "FromPort": 80,  "ToPort": 80,  "CidrIp": "208.64.192.0/22", "Description": "All (HTTP) Public Traffic from WEX VPN to be redirected to HTTPS"}, {"Ref": "AWS::NoValue"}]},
          {"Fn::If": ["isNotDevEnv", {"IpProtocol": "tcp", "FromPort": 443, "ToPort": 443, "CidrIp": "0.0.0.0/0",       "Description": "All Encrypted (HTTPS) Traffic"},                                    {"Ref": "AWS::NoValue"}]},
          {"Fn::If": ["isNotDevEnv", {"IpProtocol": "tcp", "FromPort": 80,  "ToPort": 80,  "CidrIp": "0.0.0.0/0",       "Description": "All (HTTP) Traffic"},                                               {"Ref": "AWS::NoValue"}]}
        ],
        "SecurityGroupEgress":  [
          {"IpProtocol": -1, "CidrIp": "127.0.0.1/32", "Description": "Localhost Loopback"}
        ],
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Sub": ["${platform} - ${instance} - Public Shared ALB Instance",
            {"platform": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-platform"}}}]}}
        ]
      }
    },

    "PublicAlbInstance": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Description": "External/Public Load Balancer",
      "Properties": {
        "Type": "application",
        "Scheme": "internet-facing",
        "Name": {"Fn::Sub": ["${prefix}-${instance}-public-alb",
          {"prefix": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-resource-prefix"}}}]},
        "SecurityGroups": [{"Ref": "SecGrpPublicAlb"}],
        "Subnets": {"Ref": "publicSubnets"},
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Sub": ["${platform} - ${instance} - AppLoadBalancer - Public Shared Instance",
            {"platform": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-platform"}}}]}}
        ]
      },
      "DependsOn": ["SecGrpPublicAlb"]
    },

    "ListenerHttp": {
      "Type": "Custom::ElasticLoadBalancingV2_Listener",
      "Properties": {
        "ServiceToken": {"Fn::ImportValue": {"Fn::Sub": "${accountStackName}-cfELBv2Listener-Arn"}},
        "DefaultActions" : [
          {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": 443, "StatusCode": "HTTP_301"}}
        ],
        "LoadBalancerArn" : {"Ref": "PublicAlbInstance"},
        "Port" : 80,
        "Protocol" : "HTTP"
      },
      "DependsOn": ["PublicAlbInstance"]
    },
    "ListenerHttps": {
      "Type": "Custom::ElasticLoadBalancingV2_Listener",
      "Properties": {
        "ServiceToken": {"Fn::ImportValue": {"Fn::Sub": "${accountStackName}-cfELBv2Listener-Arn"}},
        "DefaultActions": [{"Type": "fixed-response", "FixedResponseConfig": {"StatusCode": "404"}}],
        "LoadBalancerArn": {"Ref": "PublicAlbInstance"},
        "Port": 443,
        "Protocol": "HTTPS",
        "SslPolicy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
        "Certificates": [{"CertificateArn": {"Ref": "HttpsCertExternal"}}]
      },
      "DependsOn": ["PublicAlbInstance", "HttpsCertExternal"]
    },

    "RecordSetGroupPublicALB": {
      "Type": "AWS::Route53::RecordSetGroup",
      "Properties": {
        "Comment": {"Fn::Sub": ["Public ALB for the ${instance} instance of the ${platform} platform",
          {"platform": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-platform"}}}]},
        "HostedZoneId": {"Ref": "HostedZoneExternal"},
        "RecordSets": [{
          "Name": {"Fn::Sub": ["${instance}.${domain}",
            {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneExternal-Domain"}}}]},
          "Type": "A",
          "AliasTarget": {
            "HostedZoneId": {"Fn::GetAtt": ["PublicAlbInstance", "CanonicalHostedZoneID"]},
            "DNSName": {"Fn::GetAtt": ["PublicAlbInstance", "DNSName"]}
          }
        }, {
          "Name": {"Fn::Sub": ["*.${instance}.${domain}",
            {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneExternal-Domain"}}}]},
          "Type": "A",
          "AliasTarget": {
            "HostedZoneId": {"Fn::GetAtt": ["PublicAlbInstance", "CanonicalHostedZoneID"]},
            "DNSName": {"Fn::GetAtt": ["PublicAlbInstance", "DNSName"]}
          }
        }]
      },
      "DependsOn": ["PublicAlbInstance", "HostedZoneExternal"]
    },

    "SubnetGroupRds": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Internal Subnets for use by RDS instances",
        "DBSubnetGroupName": {"Fn::Sub": ["${prefix}-${instance}-rds-subnet-group",
          {"prefix": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-resource-prefix"}}}]},
        "SubnetIds": {"Ref": "privateSubnets"},
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Sub": ["${platform} - ${instance} - RDS Internal Subnets",
            {"platform": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-platform"}}}]}}
        ]
      }
    },

    "SecGrpRdsMySQLInstance": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": {"Fn::Sub": ["${prefix}-${instance}-rds--mysql-sg",
          {"prefix": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-resource-prefix"}}}]},
        "GroupDescription": "Access to internal RDS instances",
        "VpcId": {"Ref": "vpc"},
        "SecurityGroupIngress": [
          {"Fn::If": ["isNotProdEnv", {"IpProtocol": "tcp", "FromPort": 3306, "ToPort": 3306, "CidrIp": "10.78.0.0/15", "Description": "WEX SoPo VPN Traffic"},           {"Ref": "AWS::NoValue"}]},
          {"Fn::If": ["isNotProdEnv", {"IpProtocol": "tcp", "FromPort": 3306, "ToPort": 3306, "CidrIp": "10.178.32.0/21", "Description": "WEX remoteaccess VPN Traffic"}, {"Ref": "AWS::NoValue"}]}
        ],
        "SecurityGroupEgress": [
          {"IpProtocol": -1, "CidrIp": "127.0.0.1/32", "Description": "Localhost Loopback"}
        ],
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Sub": ["${platform} - ${instance} - RDS MySql Instance",
            {"platform": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-platform"}}}]}}
        ]
      }
    },
    "SecGrpRdsOracleInstance": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": {"Fn::Sub": ["${prefix}-${instance}-rds-oracle-sg",
          {"prefix": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-resource-prefix"}}}]},
        "GroupDescription": "Access to internal RDS instances",
        "VpcId": {"Ref": "vpc"},
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": 1521, "ToPort": 1521, "CidrIp": "10.78.0.0/15", "Description": "WEX SoPo VPN Traffic"},
          {"IpProtocol": "tcp", "FromPort": 1521, "ToPort": 1521, "CidrIp": "10.178.32.0/21", "Description": "WEX remoteaccess VPN Traffic"}
        ],
        "SecurityGroupEgress": [
          {"IpProtocol": -1, "CidrIp": "127.0.0.1/32", "Description": "Localhost Loopback"}
        ],
        "Tags": [
          {"Key": "Name", "Value": {"Fn::Sub": ["${platform} - ${instance} - RDS Oracle Instance",
            {"platform": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-platform"}}}]}}
        ]
      }
    }

  },

  "Outputs": {
    "OutputResourcePrefix": {
      "Description": "Base prefix for resources names",
      "Value": {"Fn::Sub": ["${prefix}-${instance}",
        {"prefix": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-resource-prefix"}}}]},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-resource-prefix"}}
    },

    "OutputHostedZoneExternalId": {
      "Description": "Delegate Hosted Zone for Account",
      "Value": {"Ref": "HostedZoneExternal"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-HostedZoneExternal-Id"}}
    },
    "OutputHostedZoneExternalDomain": {
      "Description": "External parent DNS Id for resources within this account",
      "Value": {"Fn::Sub": ["${instance}.${domain}",
        {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneExternal-Domain"}}}]},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-HostedZoneExternal-Domain"}}
    },
    "OutputHostedZoneInternalDomain": {
      "Description": "Delegate Hosted Zone for Account",
      "Value": {"Fn::Sub": ["${instance}.${domain}",
        {"domain": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneInternal-Domain"}}}]},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-HostedZoneInternal-Domain"}}
    },
    "OutputHostedZoneInternalId": {
      "Description": "Internal Hosted Zone for Millennium Environment",
      "Value": {"Fn::ImportValue": {"Fn::Sub": "${platformStackName}-HostedZoneInternal-Id"}},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-HostedZoneInternal-Id"}}
    },
    "OutputHttpsCertExternal": {
      "Description": "Certificate for TLS communication to Public ALB",
      "Value": {"Ref": "HttpsCertExternal"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-HttpsCertExternal"}}
    },
    "OutputHttpsCertInternal": {
      "Description": "Certificate for TLS communication to Private ALBs",
      "Value": {"Ref": "HttpsCertInternal"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-HttpsCertInternal"}}
    },
    "OutputSecGrpPublicAlbId": {
      "Description": "Security Group ID for the Shared Public ALB",
      "Value": {"Ref": "SecGrpPublicAlb"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-SecGrpPublicAlb-Id"}}
    },

    "OutputPublicAlbInstanceArn": {
      "Description": "Public Shared Application Load Balancer Ref Id",
      "Value": {"Ref": "PublicAlbInstance"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-PublicAlbInstance-Arn"}}
    },
    "OutputPublicAlbInstanceCNHostedZoneId": {
      "Description": "Public Shared Application Load Balancer CanonicalHostedZoneID",
      "Value": {"Fn::Sub": "${PublicAlbInstance.CanonicalHostedZoneID}"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-PublicAlbInstance-CanonicalHostedZoneID"}}
    },
    "OutputPublicAlbInstanceDNSName": {
      "Description": "Public Shared Application Load Balancer DNSName",
      "Value": {"Fn::GetAtt": ["PublicAlbInstance", "DNSName"]},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-PublicAlbInstance-DNSName"}}
    },
    "OutputPublicAlbInstanceFullName": {
      "Description": "Public Shared Application Load Balancer LoadBalancerFullName",
      "Value": {"Fn::GetAtt": ["PublicAlbInstance", "LoadBalancerFullName"]},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-PublicAlbInstance-FullName"}}
    },
    "OutputPublicAlbInstanceLoadBalancerName": {
      "Description": "Public Shared Application Load Balancer LoadBalancerFullName",
      "Value": {"Fn::Sub": "${PublicAlbInstance.LoadBalancerName}"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-PublicAlbInstance-LoadBalancerName"}}
    },

    "OutputListenerHttpArn": {
      "Description": "Public ALB Listener for HTTP traffic",
      "Value": {"Ref": "ListenerHttp"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-ListenerHttp-Arn"}}
    },
    "OutputListenerHttpPort": {
      "Description": "Public ALB Listener Port for HTTP traffic",
      "Value": {"Fn::GetAtt": ["ListenerHttps", "Port"]},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-ListenerHttp-Port"}}
    },

    "OutputListenerHttpsArn": {
      "Description": "Public ALB Listener for Https traffic",
      "Value": {"Ref": "ListenerHttps"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-ListenerHttps-Arn"}}
    },
    "OutputListenerHttpsPort": {
      "Description": "Public ALB Listener Port for Https traffic",
      "Value": {"Fn::GetAtt": ["ListenerHttps", "Port"]},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-ListenerHttps-Port"}}
    },

    "OutputRecordSetGroupPublicALB": {
      "Description": "DNS Record for A Record Alias to Public ALB",
      "Value": {"Ref": "RecordSetGroupPublicALB"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-RecordSetGroupPublicALB-Name"}}
    },
    "OutputRdsSubnetGroup": {
      "Description": "RDS Subnet Group",
      "Value": {"Ref": "SubnetGroupRds"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-RdsSubnetGroup-Id"}}
    }
  }
}
